Qsampler - A LinuxSampler Qt GUI Interface
------------------------------------------

ChangeLog


GIT HEAD

* Single/unique application instance control adapted to Qt5/X11.
  (EXPERIMENTAL)


0.3.1  2015-07-19  Summer'15 release frenzy.

* Fixed configure script's Qt include directory lookup for some
  64bit Linux flavours.

* Prefer Qt5 over Qt4 by default with configure script.

* A new top-level widget window geometry state save and restore
  sub-routine is now in effect. (EXPERIMENTAL)

* Fixed for some strict tests for Qt4 vs. Qt5 configure builds.


0.3.0  2015-03-25  Pre-LAC2015 release frenzy.

* Added application description as freedesktop.org's AppData.

* Added this "Don't ask/show this again" option to some if not most
  of the nagging warning/error message boxes.

* Mac OS X: Fixed default path of linuxsampler binary.

* When closing qsampler and showing the user the dialog whether to
  stop the LinuxSampler backend, set the default selection to "Yes".

* Master volume slider now getting proper layout when changing its
  main toolbar orientation.

* Messages standard output capture has been slightly improved
  as for non-blocking i/o, whenever available.

* Adjusted configure check for libgig to detect the new --includedir.

* A man page has beed added (making up Matt Flax's work on
  debian, thanks).

* Translations install directory change.

* Added support for SF2 instrument names/preset enumeration.

* Added instrument list popup on channel strip which shows up when
  the instrument name is clicked. Allows faster switching among
  instruments of the same file.

* Adjusted configure check for libgig to detect its new --libdir
  (impolitely forcing the user now to have at least libgig 3.3.0).


0.2.3  2013-12-31  A fifth of a Jubilee.

* Allow the build system to include an user specified LDFLAGS.

* More preparations for Qt5 configure build.

* Standard scalable format (SVG) and MIME type icons support for